--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,10 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'dagger.hilt.android.plugin'
 
+ext {
+  okhttp_version = '4.10.0'
+  retrofit_version = '2.9.0'
+}
 android {
   compileSdkVersion 32
   defaultConfig {
@@ -35,12 +39,14 @@ dependencies {
   implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
   implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
-  implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-  implementation 'com.squareup.retrofit2:adapter-rxjava2:2.9.0'
-  implementation 'com.squareup.okhttp3:okhttp:4.10.0'
+  implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
+  implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit_version"
+  implementation "com.squareup.okhttp3:okhttp:$okhttp_version"
+  implementation "com.squareup.okhttp3:logging-interceptor:$okhttp_version"
 
   // JSON Parsing
   implementation 'com.google.code.gson:gson:2.9.0'
+  implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
   implementation 'com.squareup.moshi:moshi:1.13.0'
   kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.13.0'
