--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,8 @@ dependencies {
   implementation 'com.google.code.gson:gson:2.9.0'
   implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
+  implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1")
+  implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.5.1")
   implementation 'com.squareup.moshi:moshi:1.13.0'
   kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.13.0'
 
