--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
-apply plugin: 'dagger.hilt.android.plugin'
+apply plugin: 'com.google.dagger.hilt.android'
 
 ext {
   okhttp_version = '4.10.0'
@@ -48,8 +48,11 @@ dependencies {
   implementation 'com.google.code.gson:gson:2.9.0'
   implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
 
-  implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1")
-  implementation("androidx.lifecycle:lifecycle-runtime-ktx:2.5.1")
+  implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
+  implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
+  implementation "androidx.activity:activity-ktx:1.5.0"
+  implementation "androidx.fragment:fragment-ktx:1.5.0"
+
   implementation 'com.squareup.moshi:moshi:1.13.0'
   kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.13.0'
 
@@ -58,8 +61,8 @@ dependencies {
   // Image Loading
   implementation 'com.github.bumptech.glide:glide:4.13.1'
 
-  implementation 'com.google.dagger:hilt-android:2.42'
-  kapt 'com.google.dagger:hilt-compiler:2.42'
+  implementation 'com.google.dagger:hilt-android:2.44'
+  kapt 'com.google.dagger:hilt-compiler:2.44'
 
   // OKHttpInterceptor
   implementation("com.localebro:okhttpprofiler:1.0.8")
@@ -70,4 +73,9 @@ dependencies {
   androidTestImplementation 'androidx.test:core:1.4.0'
   androidTestImplementation 'androidx.test.ext:junit:1.1.3'
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+}
+
+// Allow references to generated code
+kapt {
+  correctErrorTypes true
 }
