--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,10 +50,10 @@ dependencies {
 
   implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.5.1"
   implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.5.1"
-  implementation "androidx.activity:activity-ktx:1.5.0"
-  implementation "androidx.fragment:fragment-ktx:1.5.0"
+  implementation "androidx.fragment:fragment-ktx:1.5.4"
 
   implementation 'com.squareup.moshi:moshi:1.13.0'
+  implementation 'androidx.navigation:navigation-fragment:2.5.3'
   kapt 'com.squareup.moshi:moshi-kotlin-codegen:1.13.0'
 
   implementation "com.fasterxml.jackson.module:jackson-module-kotlin:2.13.2"
@@ -66,6 +66,9 @@ dependencies {
 
   // OKHttpInterceptor
   implementation("com.localebro:okhttpprofiler:1.0.8")
+
+  //Navigation
+  implementation "androidx.navigation:navigation-ui-ktx:2.5.3"
 
   // Testing
   testImplementation 'junit:junit:4.13.2'
