--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,16 +6,24 @@ apply plugin: 'com.google.dagger.hilt.android'
 ext {
   okhttp_version = '4.10.0'
   retrofit_version = '2.9.0'
+  compose_version = '1.3.0'
 }
 android {
-  compileSdkVersion 32
+  compileSdkVersion 33
   defaultConfig {
     applicationId "com.target.targetcasestudy"
     minSdkVersion 24
-    targetSdkVersion 32
+    targetSdkVersion 33
     versionCode 1
     versionName "1.0"
     testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+  }
+  buildFeatures {
+    compose true
+  }
+
+  composeOptions {
+    kotlinCompilerExtensionVersion = "1.3.2"
   }
 
   compileOptions {
@@ -35,7 +43,7 @@ dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
 
-  implementation 'androidx.appcompat:appcompat:1.4.2'
+  implementation 'androidx.appcompat:appcompat:1.5.1'
   implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
   implementation 'androidx.recyclerview:recyclerview:1.2.1'
 
@@ -61,8 +69,16 @@ dependencies {
   // Image Loading
   implementation 'com.github.bumptech.glide:glide:4.13.1'
 
+  // Hilt
   implementation 'com.google.dagger:hilt-android:2.44'
   kapt 'com.google.dagger:hilt-compiler:2.44'
+
+  // Jetpack Compose
+  implementation "androidx.compose.material:material:$compose_version"
+  implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
+  implementation "androidx.compose.foundation:foundation:$compose_version"
+  implementation "androidx.compose.runtime:runtime:$compose_version"
+  implementation "androidx.compose.runtime:runtime-livedata:1.3.0"
 
   // OKHttpInterceptor
   implementation("com.localebro:okhttpprofiler:1.0.8")
