--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,8 @@ dependencies {
   implementation "androidx.compose.foundation:foundation:$compose_version"
   implementation "androidx.compose.runtime:runtime:$compose_version"
   implementation "androidx.compose.runtime:runtime-livedata:1.3.0"
+  // Glide-Jetpack Compose
+  implementation "com.github.bumptech.glide:compose:1.0.0-alpha.1"
 
   // OKHttpInterceptor
   implementation("com.localebro:okhttpprofiler:1.0.8")
