--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,6 +79,7 @@ dependencies {
   implementation "androidx.compose.foundation:foundation:$compose_version"
   implementation "androidx.compose.runtime:runtime:$compose_version"
   implementation "androidx.compose.runtime:runtime-livedata:1.3.0"
+  implementation "androidx.constraintlayout:constraintlayout-compose:1.0.1"
   // Glide-Jetpack Compose
   implementation "com.github.bumptech.glide:compose:1.0.0-alpha.1"
 
